# Laba_4.6

./: .pre-commit-config.yaml  README.md  directory_structure.xml  environment  idz.py  primer1.py  pyproject.toml
doc/: Laba_4.6.docx
src/: idz.py  primer.py
test/: test_idz.py  test_primer.py
