[tool.poetry]
name = "laba-4-6"
version = "0.1.0"
description = ""
authors = ["Evgeni <kkrutkov02@gmail.com>"]
readme = "README.md"
packages = [{include = "laba_4"}]

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.13.2"
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "^1.14.0"
pre-commit = "^4.0.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.isort]
profile = "black"
include_trailing_comma = true
skip = ["test/test_idz.py"]
lines_after_imports = 2

[tool.flake8]
exclude = [
    ".git",
    ".idea",
    "doc",
    "tests",
    ".gitignore"
]
max-line-length = 120
ignore = ["E203", "F403", "F405", "F841", "E303", "E302", "E402", "F401", "E704"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["arg-type"]

[tool.black]
line-length = 140
exclude = """
.idea/
tests/
doc/
test_idz.py
"""